--- a/scss/sourse/pages/product/_detail.sass
+++ b/scss/sourse/pages/product/_detail.sass
@@ -95,3 +95,20 @@
     text-align: center
 .product-description-container
   margin-bottom: 15px
+@media (max-width: 576px)
+  .product-info
+    padding: 15px
+  .product-info-item
+    font-size: 14px
+  .product-info-item
+    .main-grid
+      gap: 10px 0
+  .product-about
+    display: block
+    .about-item
+      height: 100px
+  .product-slider-container
+    height: 520px
+    .lSGallery
+      a
+        height: 60px
