--- a/scss/sourse/blocks/popup/_default.sass
+++ b/scss/sourse/blocks/popup/_default.sass
@@ -39,3 +39,12 @@
   transition: ease-out 0.5s
   overflow-y: auto
   max-height: 100%
+@media (max-width: 576px)
+  .popup-container
+    padding: 45px 15px
+    border-radius: 0
+    h2
+      font-size: 21px
+      margin: 0 0 30px
+  .close-btn--popup
+    top: 0
