--- a/scss/sourse/blocks/popup/_menu.sass
+++ b/scss/sourse/blocks/popup/_menu.sass
@@ -44,9 +44,10 @@
 		font-size: 24px
 
 	li
-		padding: 24px 0
+		padding: 18px 0
 		border-bottom: 1px solid $grayColor
 		position: relative
+		font-size: 18px
 		i
 			@include positionElement(30px,30px,0, 50%, right)
 			@include bgImageEl("../images/arrows/carret-down-black.svg")
@@ -59,9 +60,18 @@
 			padding-left: 30px
 			li:last-child
 				border: 0
-		&:hover
+			li
+				border: 0
+				padding: 8px 0
+				font-size: 16px
+		// &:hover
+		// 	ul
+		// 		display: block
+		&.active
 			ul
 				display: block
+			i
+				transform: rotate(90deg)
 .menu-footer
 	// @include positionElement(100%,auto,0,0,left, bottom)
 	background-color: $redColor
@@ -69,9 +79,8 @@
 	padding: 25px 15px
 	border-radius: 0 50px 0 0
 .menu-footer-item
+	font-size: $standartSize
 	margin-bottom: 8px
-	.mail-btn
-		font-size: $standartSize
 .menu-header,
 .popup-nav
 	padding: 45px 15px 60px
