--- a/scss/sourse/default/_content.sass
+++ b/scss/sourse/default/_content.sass
@@ -63,6 +63,10 @@ section
 		background-color: $blackColor
 	h2
 		background-color: $whiteColor
+
+.head-section-text
+	width: calc( 100% + 50px)
+
 .btn-container-section
 	padding: 40px 0 0px
 	text-align: center
@@ -72,7 +76,7 @@ section
 .breadcrumbs
 	font-size: $smallSize
 	margin: 15px 0 10px
-	padding: 0 8px
+	// padding: 0 8px
 	color: $grayColor
 	position: relative
 	z-index: 2
@@ -94,8 +98,11 @@ section
 		&:hover
 			text-decoration: underline
 	span
-		vertical-align: middle
-		margin: 0 5px
+		vertical-align: top
+		margin: 0 5px 0px 5px
+		display: inline-block
+		position: relative
+		top: -1px
 		&:first-child
 			margin-left: 0
 
@@ -111,3 +118,8 @@ section
 	.head-section
 		h2
 			font-size: 24px
+	.content
+		h1
+			padding-bottom: 0px
+	.head-section-text
+		width: 100%
