--- a/scss/sourse/pages/news/_catalog.sass
+++ b/scss/sourse/pages/news/_catalog.sass
@@ -15,7 +15,7 @@
       position: relative
       overflow: hidden
       &:hover
-        color: $goldColor
+        color: $redColor
 .blog-item-info
 
 .blog-item-text
