--- a/scss/sourse/pages/product/_detail.sass
+++ b/scss/sourse/pages/product/_detail.sass
@@ -83,11 +83,12 @@
     padding: 0
 .product-info-item
   margin-bottom: 30px
+
   h2
     font-size: 16px
     margin-bottom: 15px
   .main-grid
-    gap: 0
+    gap: 15px
 .product-description
   h3
     margin-bottom: 15px
@@ -98,6 +99,8 @@
 @media (max-width: 576px)
   .product-info
     padding: 15px
+    h4
+      font-size: 16px
   .product-info-item
     font-size: 14px
   .product-info-item
