--- a/scss/sourse/elements/_btns-icons.sass
+++ b/scss/sourse/elements/_btns-icons.sass
@@ -57,6 +57,10 @@ $icoOffset: 8px
 .more-btn--gray
 	@include icoBtn("../images/icons/more-gray.svg", "../images/icons/more-red.svg", 50px)
 	text-decoration: none
+
+.filter-btn--red
+	@include icoBtn("../images/icons/filter-white.svg", "../images/icons/filter-black.svg", 20px)
+	text-decoration: none
 .link-next
 	@include icoBtn("../images/arrows/arrow-right-black.svg", "../images/arrows/arrow-right-red.svg", 30px)
 	text-decoration: none
