--- a/scss/sourse/blocks/popup/_default.sass
+++ b/scss/sourse/blocks/popup/_default.sass
@@ -41,7 +41,7 @@
   max-height: 100%
 @media (max-width: 576px)
   .popup-container
-    padding: 45px 15px
+    padding: 60px 15px 30px
     border-radius: 0
     h2
       font-size: 21px
