--- a/scss/sourse/elements/_btns-icons.sass
+++ b/scss/sourse/elements/_btns-icons.sass
@@ -61,6 +61,7 @@ $icoOffset: 8px
 .filter-btn--red
 	@include icoBtn("../images/icons/filter-white.svg", "../images/icons/filter-black.svg", 20px)
 	text-decoration: none
+	border: 0
 .link-next
 	@include icoBtn("../images/arrows/arrow-right-black.svg", "../images/arrows/arrow-right-red.svg", 30px)
 	text-decoration: none
