--- a/scss/sourse/pages/_contacts.sass
+++ b/scss/sourse/pages/_contacts.sass
@@ -15,3 +15,14 @@
   margin-bottom: 30px
   img
     width: 100%
+.address-for-map
+  display: none
+@media (max-width: 576px)
+  .page-contacts
+    h1
+      margin-bottom: 30px
+    h2
+      font-size: 18px
+      margin-bottom: 8px
+  .address-item
+    margin-bottom: 15px
