--- a/scss/sourse/pages/_nodes.sass
+++ b/scss/sourse/pages/_nodes.sass
@@ -47,3 +47,11 @@
   position: relative
   border-radius: 20px
   overflow: hidden
+@media (max-width: 576px)
+  .nodes-stage-item
+    grid-column: span 12
+  .nodes-stage
+    height: auto
+  .nodes-stage-gallery
+    .main-grid
+      gap: 8px
