--- a/scss/sourse/pages/product/_detail.sass
+++ b/scss/sourse/pages/product/_detail.sass
@@ -56,6 +56,8 @@
   grid-template-columns: repeat(2,1fr)
   gap: 30px
   // margin-bottom: 30px
+  .btn
+    display: none
   h3
     font-size: 36px
   .about-item
@@ -108,6 +110,8 @@
       gap: 10px 0
   .product-about
     display: block
+    .btn
+      display: block
     .about-item
       height: 100px
   .product-slider-container
