--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -10,6 +10,7 @@ header
   min-width: 320px
   // padding: 10px 0
   transition: ease-out 0.5s
+  padding: 15px 0 0
   a
     text-decoration: none
 
@@ -17,7 +18,7 @@ header
     padding: 6px 0
     font-size: $smallSize
   .main-grid
-    gap: 15px 30px
+    gap: 0px 30px
   &.stick
     top: -200px
     position: fixed
@@ -154,3 +155,5 @@ header
     padding: 20px 0 15px
     .btn
       display: none
+  .stub
+    height: 70px
