--- a/scss/sourse/blocks/popup/_menu.sass
+++ b/scss/sourse/blocks/popup/_menu.sass
@@ -12,13 +12,12 @@
 		background-image: url("../images/icons/close-gray.svg")
 	a
 		width: 100%
-	#menu-item-175
-		display: none
+
 .menu-mobile
 	display: flex
 	justify-content: space-between
 	flex-direction: column
-	height: 100%
+	height: 100dvh
 .menu-hamburger
 	top: 0px
 	height: 100vh
@@ -78,12 +77,22 @@
 	color: $whiteColor
 	padding: 25px 15px
 	border-radius: 0 50px 0 0
+	a:hover
+		color: $whiteColor !important
+	.phone-btn
+		&:hover
+			i
+				background-image: url(../images/icons/phone-white.svg)
+	.mail-btn
+		&:hover
+			i
+				background-image: url(../images/icons/mail-white.svg)
 .menu-footer-item
 	font-size: $standartSize
 	margin-bottom: 8px
 .menu-header,
 .popup-nav
-	padding: 45px 15px 60px
+	padding: 45px 15px 0px
 .popup-nav
 
 	a
