--- a/scss/sourse/pages/_recycling.sass
+++ b/scss/sourse/pages/_recycling.sass
@@ -61,6 +61,7 @@
     border-radius: 0 30px 0 30px
 .recycling-item-info
   padding: 30px
+  height: 360px
   background-color: #ECECEC
   border-radius: 0 50px 0 50px
   b
