--- a/scss/sourse/pages/product/_filter.sass
+++ b/scss/sourse/pages/product/_filter.sass
@@ -35,6 +35,7 @@
   .btn-filter-container
     display: flex
     gap: 15px
-    margin-top: 30px
+    margin-top: 15px
+    margin-bottom: -30px
     .btn
       width: 50%
